Update model saving method

--- a/Train_DSM2_ANN.ipynb
+++ b/Train_DSM2_ANN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOF8cfqrP0AxICx0XRsQhX3",
+      "authorship_tag": "ABX9TyMkP2vu50jDG7k53UxA8LQw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qoF2IDzuFbBJ",
-        "outputId": "16afce85-0e9a-413d-d13a-a3aa967ab9ab"
+        "outputId": "23090219-4925-4147-9a31-4b5abd0e742f"
       },
       "source": [
         "from google.colab import drive\n",
@@ -146,7 +146,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tEX9b1y8FodS",
-        "outputId": "ed0899be-a54a-4e79-e246-95b3dcc4fe3c"
+        "outputId": "e78d4f6e-948e-4eb3-d422-46d2c2697765"
       },
       "source": [
         "data_files=sorted(tf.io.gfile.glob(os.path.join('/content/drive','My Drive',google_drive_dir,'src','data_%s_*.csv')%data_resolution))\n",
@@ -440,7 +440,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X1UjfI3sIXHD",
-        "outputId": "bbc0a2e1-714d-4bd5-b59a-9e1a7db47e1b"
+        "outputId": "3b39068c-b736-431d-8d2b-e76069ac15c6"
       },
       "source": [
         "losses = {}\n",
@@ -460,7 +460,7 @@
         "        monitor=\"val_loss\",\n",
         "        filepath=path_checkpoint,\n",
         "        verbose=1,\n",
-        "        save_weights_only=True,\n",
+        "        save_weights_only=False,\n",
         "        save_best_only=True,\n",
         "    )\n",
         "\n",
@@ -503,7 +503,7 @@
         "    losses[selected_output_variable] = history.history['loss'][-1]\n",
         "    val_losses[selected_output_variable] = history.history['val_loss'][-1]\n"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,34 +511,34 @@
           "text": [
             "Training ANN #1 for key Station CHDMC006\n",
             "Learning rate:  0.01\n",
-            "57/57 [==============================] - ETA: 0s - loss: 0.1308 - mean_squared_error: 0.1308\n",
-            "Epoch 00001: val_loss improved from inf to 0.04488, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/CHDMC006_train_conv_checkpoint.h5\n",
-            "57/57 [==============================] - 38s 650ms/step - loss: 0.1308 - mean_squared_error: 0.1308 - val_loss: 0.0449 - val_mean_squared_error: 0.0449 - lr: 0.0100\n",
+            "57/57 [==============================] - ETA: 0s - loss: 0.0710 - mean_squared_error: 0.0710\n",
+            "Epoch 00001: val_loss improved from inf to 0.12614, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/CHDMC006_train_conv_checkpoint.h5\n",
+            "57/57 [==============================] - 67s 639ms/step - loss: 0.0710 - mean_squared_error: 0.0710 - val_loss: 0.1261 - val_mean_squared_error: 0.1261 - lr: 0.0100\n",
             "Training ANN #2 for key Station CHSWP003\n",
             "Learning rate:  0.01\n",
-            "54/54 [==============================] - ETA: 0s - loss: 0.1115 - mean_squared_error: 0.1115\n",
-            "Epoch 00001: val_loss improved from inf to 0.03896, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/CHSWP003_train_conv_checkpoint.h5\n",
-            "54/54 [==============================] - 38s 682ms/step - loss: 0.1115 - mean_squared_error: 0.1115 - val_loss: 0.0390 - val_mean_squared_error: 0.0390 - lr: 0.0100\n",
+            "54/54 [==============================] - ETA: 0s - loss: 0.2017 - mean_squared_error: 0.2017\n",
+            "Epoch 00001: val_loss improved from inf to 0.44983, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/CHSWP003_train_conv_checkpoint.h5\n",
+            "54/54 [==============================] - 37s 658ms/step - loss: 0.2017 - mean_squared_error: 0.2017 - val_loss: 0.4498 - val_mean_squared_error: 0.4499 - lr: 0.0100\n",
             "Training ANN #3 for key Station ROLD059\n",
             "Learning rate:  0.01\n",
-            "43/43 [==============================] - ETA: 0s - loss: 0.4774 - mean_squared_error: 0.4774\n",
-            "Epoch 00001: val_loss improved from inf to 0.05973, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/ROLD059_train_conv_checkpoint.h5\n",
-            "43/43 [==============================] - 37s 760ms/step - loss: 0.4774 - mean_squared_error: 0.4774 - val_loss: 0.0597 - val_mean_squared_error: 0.0597 - lr: 0.0100\n",
+            "43/43 [==============================] - ETA: 0s - loss: 0.2474 - mean_squared_error: 0.2474\n",
+            "Epoch 00001: val_loss improved from inf to 3.96580, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/ROLD059_train_conv_checkpoint.h5\n",
+            "43/43 [==============================] - 37s 755ms/step - loss: 0.2474 - mean_squared_error: 0.2474 - val_loss: 3.9658 - val_mean_squared_error: 3.9662 - lr: 0.0100\n",
             "Training ANN #4 for key Station RSAC092\n",
             "Learning rate:  0.01\n",
-            "57/57 [==============================] - ETA: 0s - loss: 0.0848 - mean_squared_error: 0.0848\n",
-            "Epoch 00001: val_loss improved from inf to 0.12398, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/RSAC092_train_conv_checkpoint.h5\n",
-            "57/57 [==============================] - 39s 661ms/step - loss: 0.0848 - mean_squared_error: 0.0848 - val_loss: 0.1240 - val_mean_squared_error: 0.1240 - lr: 0.0100\n",
+            "57/57 [==============================] - ETA: 0s - loss: 0.0366 - mean_squared_error: 0.0366\n",
+            "Epoch 00001: val_loss improved from inf to 0.04233, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/RSAC092_train_conv_checkpoint.h5\n",
+            "57/57 [==============================] - 39s 658ms/step - loss: 0.0366 - mean_squared_error: 0.0366 - val_loss: 0.0423 - val_mean_squared_error: 0.0423 - lr: 0.0100\n",
             "Training ANN #5 for key Station RSAN018\n",
             "Learning rate:  0.01\n",
-            "58/58 [==============================] - ETA: 0s - loss: 0.0388 - mean_squared_error: 0.0388\n",
-            "Epoch 00001: val_loss improved from inf to 0.35646, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/RSAN018_train_conv_checkpoint.h5\n",
-            "58/58 [==============================] - 40s 676ms/step - loss: 0.0388 - mean_squared_error: 0.0388 - val_loss: 0.3565 - val_mean_squared_error: 0.3565 - lr: 0.0100\n",
+            "58/58 [==============================] - ETA: 0s - loss: 0.0338 - mean_squared_error: 0.0338\n",
+            "Epoch 00001: val_loss improved from inf to 0.07666, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/RSAN018_train_conv_checkpoint.h5\n",
+            "58/58 [==============================] - 39s 651ms/step - loss: 0.0338 - mean_squared_error: 0.0338 - val_loss: 0.0767 - val_mean_squared_error: 0.0767 - lr: 0.0100\n",
             "Training ANN #6 for key Station SLMZU025\n",
             "Learning rate:  0.01\n",
-            "42/42 [==============================] - ETA: 0s - loss: 0.1527 - mean_squared_error: 0.1527\n",
-            "Epoch 00001: val_loss improved from inf to 2.97545, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/SLMZU025_train_conv_checkpoint.h5\n",
-            "42/42 [==============================] - 40s 829ms/step - loss: 0.1527 - mean_squared_error: 0.1527 - val_loss: 2.9754 - val_mean_squared_error: 2.9758 - lr: 0.0100\n"
+            "42/42 [==============================] - ETA: 0s - loss: 0.1234 - mean_squared_error: 0.1234\n",
+            "Epoch 00001: val_loss improved from inf to 0.10984, saving model to /content/drive/My Drive/Delta-Modelling-ANN/saved_models/SLMZU025_train_conv_checkpoint.h5\n",
+            "42/42 [==============================] - 37s 764ms/step - loss: 0.1234 - mean_squared_error: 0.1234 - val_loss: 0.1098 - val_mean_squared_error: 0.1099 - lr: 0.0100\n"
           ]
         }
       ]
@@ -550,7 +550,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8245afbb-35e1-4bf1-80b2-04c5fd4fac5a"
+        "outputId": "1a517dab-51e6-49af-ff5f-4bbe93c1357b"
       },
       "source": [
         "print ((\"{:<12}\" * 3).format('', 'Loss', 'Val Loss'))\n",
@@ -558,19 +558,19 @@
         "for station, loss in losses.items():\n",
         "    print((\"{:<12}\" * 3).format(station.replace('target',''), np.round(loss,8), np.round(val_losses[station],8)))"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "            Loss        Val Loss    \n",
-            "CHDMC006    0.13078606  0.04488457  \n",
-            "CHSWP003    0.11145645  0.03896338  \n",
-            "ROLD059     0.47735691  0.05973412  \n",
-            "RSAC092     0.08476772  0.12397845  \n",
-            "RSAN018     0.03879617  0.35645524  \n",
-            "SLMZU025    0.15270595  2.97544694  \n"
+            "CHDMC006    0.07102563  0.12613571  \n",
+            "CHSWP003    0.20171529  0.4498325   \n",
+            "ROLD059     0.24739309  3.96579671  \n",
+            "RSAC092     0.03662964  0.04232566  \n",
+            "RSAN018     0.0338104   0.07665597  \n",
+            "SLMZU025    0.12335092  0.10984158  \n"
           ]
         }
       ]
